# esp-computer-vision

./: .gitignore  Makefile  README.md  cnn.py  install.sh  pyproject.toml  requirements.txt  sdkconfig  sdkconfig.old  sweep.m  uart_receiver.py
demo/: python_demo.py
docs/: README.md
filelists/: adder_tree.json  balanced_add.json  class_framer.json  classifier_layer.json  comparator_tree.json  conv2d.json  conv_layer.json  counter_roll.json  deframer.json  fc_layer.json  filter.json  filter_dsp.json  framer.json  global_max.json  icestorm_ram.json  linear_layer.json  mac.json  mag.json  multi_delay_buffer.json  multi_delay_ram.json  neuron.json  neuron_dsp.json  packer.json  pool_layer.json  rle_decode.json  rle_encode.json  skid_buffer.json  sobel.json  top.json  unpacker.json
firmware/: CMakeLists.txt  LICENSE.md  sdkconfig.old
hardware/: counter.sv  counter_roll.sv  delaybuffer.sv  elastic.sv  filelist.json  mag.sv  packer.sv  ram_1r1w_sync.sv  sobel.sv  top.sv  uart_axis.sv  unpacker.sv
main/: CMakeLists.txt  arducam.c  arducam.h  arducam_demo.c  capture.c  i2c.c  main.c  ov2640.h  ov2640_settings.h  server.html  server_html.c  spi.c  uart.c  wifi_cam.c  wifi_cam.h
model/: __init__.py  bram_decode.py  config.py  export.py  globals.py  inference.py  model.py  plot.py  preprocess.py  protocol.py  quantize.py  render.py  sample.py  train.py
nn/: __init__.py  arch.py  bram.py  config.py  constants.py  csv_to_matlab.py  export.py  fpga.py  globals.py  inference.py  plot.py  preprocess.py  protocol.py  quantize.py  render.py  sample.py  train.py  uart.py  (+2 more)
(+361 files in other folders)
