[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "esp_model"
version = "0.1.0"
description = "Custom quantized CNN models for hardware acceleration"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["model*"]

[tool.pytest.ini_options]
pythonpath = ["sim"]

[tool.pyrefly]
search_path = ["sim"]

[[tool.mypy.overrides]]
module = [
    "cocotb.*",
    "cocotb_test.*",
    "kagglehub.*",
    "torchvision.*"
]
ignore_missing_imports = true